--- a/src/app.module.css
+++ b/src/app.module.css
@@ -5,17 +5,34 @@
   border: 1px solid black;
   margin: 50px auto;
   background: lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
 .game_over {
+  text-transform: capitalize;
   text-align: center;
-  font-size: 20px;
-  color: red;
+  font-size: 40px;
+  color: rgb(123, 67, 67);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .start_btn {
-  width: 100px;
+  border: none;
+  width: 150px;
   height: 50px;
-  background-color: red;
+  background-color: rgb(135, 213, 227);
+  font-size: 15px;
+  color: rgb(123, 67, 67);
+}
+
+.start_btn:hover {
+  background-color: blueviolet;
+  color: white;
 }
