--- a/src/app.module.css
+++ b/src/app.module.css
@@ -6,7 +6,18 @@
   border: 1px solid black;
   margin: 50px auto;
   background: rgb(151, 215, 151);
+  /* background: linear-gradient(270deg, #75f66c, #f1ec62, #4cfced, #7545d4);
+  background-size: 800% 800%;
+  animation: gradientAnimation 30s ease-in-out infinite; */
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
+
+/* @keyframes gradientAnimation {
+0% { background-position: 0% 25%; }
+25% {background-position: 25% 50%;}
+50% { background-position: 100% 50%; }
+100% { background-position: 0% 50%; }
+} */
