--- a/src/components/snake/snake.module.css
+++ b/src/components/snake/snake.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 2%;
     height: 2%;
-    background-color: rgb(25, 75, 25);
+    background-color: rgb(22, 88, 22);
     /* border-radius: 3px; */
     border: solid 0.5px rgb(16, 243, 43);
     animation: fadeOut 1s infinite;
@@ -16,5 +16,6 @@
   }
   100% {
     opacity: 0.4;
+    border: solid 0.5px rgb(10, 1, 13);
   }
 }
