--- a/src/app.module.css
+++ b/src/app.module.css
@@ -4,7 +4,7 @@
   position: relative;
   width: 650px;
   height: 650px;
-  border: 3px solid black;
+  /* border: 3px solid black; */
   margin: 50px auto;
   background: rgb(151, 215, 151);
   display: flex;
@@ -18,7 +18,7 @@
   font-size: 150px;
   opacity: 0.3;
   color: rgb(57, 125, 11);
-  /* box-shadow: 0 20px 20px rgb(5, 83, 7); */
+  /* box-shadow: 0 20px 20px rgb(13, 70, 83); */
 }
 
 .speed_window {
@@ -28,3 +28,19 @@
   color: rgb(57, 125, 11);
   top: 450px;
 }
+
+/* .path_step {
+    position: absolute;
+    width: 2%; 
+    height: 2%; 
+    box-shadow: 0 0 20px rgb(202, 93, 16);
+  } */
+
+  .path_svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
