--- a/src/components/snake/snake.module.css
+++ b/src/components/snake/snake.module.css
@@ -3,9 +3,9 @@
     width: 2%;
     height: 2%;
     background-color: rgb(22, 88, 22);
-    /* border-radius: 3px; */
+    border-radius: 4px;
     border: solid 0.5px rgb(16, 243, 43);
-    animation: fadeOut 1s infinite;
+    animation: fadeOut 2s infinite;
     /* box-shadow: 0 0 20px rgb(123, 0, 255); */
     z-index: 10;
 
@@ -15,8 +15,45 @@
   0% {
     opacity: 1;
   }
+  50% {
+    opacity: 0.7;
+    border: solid 1.2px rgb(29, 219, 80);
+  }
   100% {
-    opacity: 0.4;
-    border: solid 0.5px rgb(10, 1, 13);
+    opacity: 0.5;
+    border: solid 0.7px rgb(10, 1, 13);
   }
 }
+
+
+.invisible {
+  background-color: transparent;
+  border: none;
+  animation: none;
+  box-shadow: 0 0 20px #59f81a
+}
+
+.blinking {
+  animation: blinking 0.4s infinite;
+}
+
+@keyframes blinking {
+  0% { opacity: 1; }
+  20% { opacity: 0.5;}
+  50% {
+    opacity: 0;
+    box-shadow: 0 0 20px rgb(172, 116, 232)
+   }
+   
+  100% { opacity: 1; }
+}
+
+.freez {
+  background-color: rgb(45, 208, 245);
+  box-shadow: 0 0 20px rgb(236, 239, 239);
+} 
+
+.hot {
+  background-color: rgb(246, 61, 61);
+  box-shadow: 0 0 20px rgb(226, 120, 14);
+} 
