--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,3 +1,10 @@
+.main_window {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .game_area {
   padding: 0;
   margin: 0 auto;
@@ -5,7 +12,8 @@
   width: 650px;
   height: 650px;
   /* border: 3px solid black; */
-  margin: 50px auto;
+  /* margin: 50px auto; */
+  margin-top: 50px;
   background: rgb(151, 215, 151);
   display: flex;
   align-items: center;
@@ -36,4 +44,11 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
+  }
+
+  .inform_box { 
+    position: relative;
+    width: 650px;
+    border: 1px solid red;
+    height: 50px;
   }
