--- a/frontend/src/components/InfoBox/InfoBox.module.css
+++ b/frontend/src/components/InfoBox/InfoBox.module.css
@@ -1,40 +1,53 @@
 .inform_box { 
-    border: 1px solid #296071;
+    /* border: 1px solid #296071; */
     padding: 0 10px;
     display: flex;
     justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 700px;
-    height: 50px;
-    background-color: #5EC28F;
+    height: 90px;
+    /* background-image: url(../../assests/img/image2.jpeg); */
+    background-color: rgba(56, 84, 37, 0.7);
+    /* box-shadow: 0 0 15px #7e7b7b; */
   }
 
   .info_text {
-    text-transform: uppercase;
-    font-size: 14px;
-    color:  #2F4858;
+    /* text-transform: uppercase; */
+    font-size: 20px;
+    text-align: center;
+    font-weight:600;
+    color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
+    padding: 5px;
+    
   }
 
   .info_res {
-    text-transform: uppercase;
-    font-size: 14px;
+    text-align: center;
+    font-weight:600;
+    font-size: 20px;
     border-bottom: 2px solid red;
   }
 
   .table_button {
-    width: 120px;
-    height: 30px;
-    border-radius: 6px;
     border: none;
-    background-color: #5EC28F;;
-    color:  #2F4858;
-    border: 2px solid #00A49A;
-    text-transform: uppercase;
-    font-size: 12px;
+    width: 120px;
+    height: 60px;
+    background: transparent;
+    font-size: 20px;
     font-family: 'Undertale_Battle_Font';
-    font-weight: 800;
+    font-weight: 600;
+    color: azure;
   }
 
   .table_button:hover {
-    background-color: aqua;
+    background-color: rgb(68, 69, 68);
+  }
+
+  .info_text_best {
+    font-size: 20px;
+    font-weight:600;
+    color: azure;
+    text-align: center;
   }
