--- a/frontend/src/components/Modal/modal.module.css
+++ b/frontend/src/components/Modal/modal.module.css
@@ -13,7 +13,8 @@
   
   .modal {
     position: relative;
-    background: #C0DC80;
+    background: rgba(172, 227, 45, 0.7);
+    box-shadow: 0 0 10px rgb(172, 227, 45); 
     padding: 20px;
     width: 250px;
     height: 250px;
@@ -29,7 +30,7 @@
     font-size: 16px;
     margin-top: 20px;
     width: 150px;
-    background-color: #1B7884;
+    background-color: #6d6d6d;
     border: none;
     font-size: 15px;
     font-family: 'Undertale_Battle_Font';
@@ -39,13 +40,13 @@
   .button:hover {
     /* animation: btn_focus 4s ease; */
     transform: scale(1.1);
-    text-transform: uppercase;
   }
 
   .title {
     text-transform: capitalize;
-    color: #296071;
-    font-size: 22px;
+    color: #505050;
+    font-size: 25px;
+    font-weight: 500;
   }
 
   .input {
