--- a/frontend/src/components/Modal/modal.module.css
+++ b/frontend/src/components/Modal/modal.module.css
@@ -55,8 +55,9 @@
     font-family: inherit;
     font-size: 20px;
     border: none;
-    color: #296071;
     margin-bottom: 10px;
+    background: rgba(172, 227, 45, 0.7);
+    border: 0.5px solid rgb(2, 123, 28);
   }
 
   .input::placeholder {
@@ -66,8 +67,10 @@
   .input:focus {
     border: none;
     outline: none;
-    width: 200px;
+    background-color: #ffffff;
+    border: 0.5px solid rgb(255, 255, 255);
   }
+
 
   .result_row {
     display: flex;
