fix: fix total score at the EndModal

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@
 
 body {
   /* background-color: #17918F; */
-  background-image: url(./assests/img/image4.webp);
+  background-image: url(./assests/img/background_1.webp);
   background-size: cover;
   background-position: 50% 50%;
   margin: 0 auto;
