--- a/frontend/src/components/Snake/Snake.module.css
+++ b/frontend/src/components/Snake/Snake.module.css
@@ -29,13 +29,13 @@
   }
 }
  
-
 .invisible {  
   animation: none;
   transform: scale(0.3);
-  border: 3px solid black ;
+  border: 3px solid rgb(255, 1, 238) ;
+  background-color: transparent;
+  border-radius: 10px;
 }
-
 
 .blinking { 
   animation: blinking 0.5s infinite;
@@ -82,7 +82,7 @@
 .cut_tail {
   opacity: 1;
   animation: none;
-  background-color: #777;
+  background-color: #ffffff;
   border: none; 
   border: 1px solid rgb(18, 17, 17);
   animation: wall 4s infinite;
@@ -98,7 +98,7 @@
 }
 
 @keyframes wall {
-  from { border: 1px solid rgb(251, 255, 0); }
-  to { border: 1px solid rgb(131, 128, 128); }
+  from { border: 1px solid rgb(255, 0, 0); }
+  to { border: 1px solid rgb(142, 142, 142); }
 }
 
