--- a/frontend/src/components/Snake/Snake.module.css
+++ b/frontend/src/components/Snake/Snake.module.css
@@ -2,7 +2,6 @@
     position: absolute;
     width: 2%;
     height: 2%;
-    /* background-color: #2F4858; */
     background-color: #eeff00;
     border: solid 0.5px rgb(173, 176, 173);
     animation: fadeOut 3s infinite;
@@ -17,14 +16,14 @@
   0% {
 
     border: var(--border-snake-100);
-    /* opacity: 1; */
+    opacity: 1;
   } 
   50% {
-    /* opacity: 0.95; */
+    opacity: 0.95;
     border: var(--border-snake-50);
   }
   100% {
-    /* opacity: 0.9; */
+    opacity: 0.9;
     border: var(--border-snake-100);
   }
 }
