Add directional rounded corners to snake head

--- a/frontend/src/components/Snake/Snake.module.css
+++ b/frontend/src/components/Snake/Snake.module.css
@@ -33,6 +33,22 @@
   background-color: #2b924f;
 }
 
+.snake_head_right {
+  border-radius: 10% 50% 50% 10%;
+}
+
+.snake_head_left {
+  border-radius: 50% 10% 10% 50%;
+}
+
+.snake_head_up {
+  border-radius: 50% 50% 10% 10%;
+}
+
+.snake_head_down {
+  border-radius: 10% 10% 50% 50%;
+}
+
 
  
 .invisible {  
